fixing html validation errors

--- a/alpha/event/templates/events/_browse_events_list.html
+++ b/alpha/event/templates/events/_browse_events_list.html
@@ -27,7 +27,7 @@
 
     {% if eventsFilter.qs.count > 0 %}
         <div class="entry-navigation-np">
-            <p>
+            <span>
                 <ul>
                     {% get_pages %}
 
@@ -62,7 +62,7 @@
                         {% endif %}
                     </span>
                 </ul>
-            </p>
+            </span>
         </div>
     {% endif %}
     
