--- a/alpha/event/templates/events/create/_form.html
+++ b/alpha/event/templates/events/create/_form.html
@@ -306,7 +306,7 @@
             {% endfor %}
 
             <div class="full-screen-popup" data-thumb-width="180" data-thumb-height="180">
-                <img class="cropping-image" src="/static/images/default-event.jpg">
+                <img class="cropping-image" src="/static/images/default-event.jpg" alt="">
                 <div class="save-button">Save image</div>
                 <div class="cancel-button">Cancel</div>
             </div>
