--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang='en_US'>
+<html xmlns="http://www.w3.org/1999/xhtml" lang='en'>
 <head>
     {% load analytics %}
     {% load common_tags %}
