--- a/alpha/event/assets/styles/browse/browse_event_list.css
+++ b/alpha/event/assets/styles/browse/browse_event_list.css
@@ -77,6 +77,7 @@
 .entry-wrapper .entry-info .entry-img-prev img {
     width: 60px;
     height: 60px;
+    display: block;
 }
 
 .entry-wrapper .entry-info .entry-details-wrapper,
