--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -42,7 +42,7 @@
                                 {% endfor %}
 
                             {% else %}
-                                <img src="{{STATIC_URL}}images/default-event.jpg" height="154" weight="154">
+                                <img src="{{STATIC_URL}}images/default-event.jpg" height="154" weight="154" alt="">
                             {% endif %}
                             {% if event.venue_account_owner and event.venue_account_owner.public %}
                             <footer>
