--- a/alpha/event/templates/events/list/event_block.html
+++ b/alpha/event/templates/events/list/event_block.html
@@ -5,9 +5,9 @@
 <div class="entry-info home-page">
     <div class="entry-img-prev">
         {% if event.picture %}
-            <img src="{% cropped_thumbnail event.image "cropping" width=60 %}" height="60" weight="60">
+            <img src="{% cropped_thumbnail event.image "cropping" width=60 %}" height="60" width="60">
         {% else %}
-            <img src="{{STATIC_URL}}images/default-event.jpg" height="60" weight="60">
+            <img src="{{STATIC_URL}}images/default-event.jpg" height="60" width="60" alt="">
         {% endif %}
     </div>
     <div class="entry-details-wrapper">
