--- a/alpha/event/templates/events/list/short_single_event.html
+++ b/alpha/event/templates/events/list/short_single_event.html
@@ -6,9 +6,9 @@
 <a href="{% event_link event %}">
     <div class="entry-img-prev">
         {% if event.picture %}
-            <img src="{% cropped_thumbnail event.image "cropping" width=60 %}" height="60" weight="60" />
+            <img src="{% cropped_thumbnail event.image "cropping" width=60 %}" height="60" width="60" alt="" />
         {% else %}
-            <img src="{{STATIC_URL}}images/default-event.jpg" height="60" weight="60" />
+            <img src="{{STATIC_URL}}images/default-event.jpg" height="60" width="60" alt="" />
         {% endif %}
     </div>
     <div class="entry-details-wrapper">
