--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="search-lists">
                     <ul>
-                        <h3>Pick a Location</h3>
+                        <li class="search-lists__title">Pick a Location</li>
                     </ul>
                 </div>
             </div>
