--- a/alpha/home/templates/pagination.html
+++ b/alpha/home/templates/pagination.html
@@ -7,7 +7,7 @@
             <ul>
                 {% get_pages %}
 
-                <span class="step-links">
+                <li class="step-links">
                     {% if pages.current.is_first %}
                         <span class="prev">
                             prev
@@ -36,7 +36,7 @@
                             next
                         </a>
                     {% endif %}
-                </span>
+                </li>
             </ul>
         </p>
     </div>
