--- a/alpha/venues/templates/venues/index.html
+++ b/alpha/venues/templates/venues/index.html
@@ -82,7 +82,7 @@
                     <ul>
                         {% get_pages %}
 
-                        <span class="step-links">
+                        <li class="step-links">
                             {% if pages.current.is_first %}
                                 <span class="prev">
                                     prev
@@ -111,7 +111,7 @@
                                     next
                                 </a>
                             {% endif %}
-                        </span>
+                        </li>
                     </ul>
                 </p>
             </div>
