--- a/alpha/event/templates/events/_event_featured.html
+++ b/alpha/event/templates/events/_event_featured.html
@@ -16,14 +16,14 @@
 
     <div class="features-navigation">
         <ul>
-            <span class="step-links">
+            <li class="step-links">
                 <a class="prev" href="javascript: void;">
                     prev
                 </a>
                 <a class="next"  href="javascript: void;">
                     next
                 </a>
-            </span>
+            </li>
         </ul>
     </div>
 </div>
