--- a/alpha/home/assets/styles/styles.css
+++ b/alpha/home/assets/styles/styles.css
@@ -473,7 +473,7 @@ table.schedule-bar-menu td.selected a {
 
 .entry-navigation-np
 {
-    padding-top: 13px;
+    padding: 30px 0 28px;
     text-align:center;
 }
 
