--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -28,8 +28,8 @@
                                     </div>
 
                                     <div class="image-viewer-controls">
-                                        <div class="next" data-ga-label="Photo Scroll Link"><i class="icon-chevron-right"></i></div>
-                                        <div class="prev"><i class="icon-chevron-left"></i></div>
+                                        <div class="next" data-ga-label="Photo Scroll Link"><i class="white-arrow white-arrow_pos_next"></i></div>
+                                        <div class="prev"><i class="white-arrow white-arrow_pos_prev"></i></div>
                                         <span class="page-no">1</span> of <span id="images-total">{{ event.sorted_images.count }}</span>
                                     </div>
                                 </div>
