--- a/alpha/event/assets/styles/event/event-details.css
+++ b/alpha/event/assets/styles/event/event-details.css
@@ -1,12 +1,41 @@
 .event-wrapper {
     position: relative;
-    background: #fdfcfc;
-    border: 1px solid #ccc;
-    padding-left: 13px;
-    padding-top: 13px;
-    padding-right: 15px;
-    padding-bottom: 30px;
+    padding: 13px 15px 30px 13px;
     vertical-align: top;
+}
+
+.event-details__container {
+    -webkit-box-shadow: 4px 3px 6px 2px rgba(50, 50, 50, 0.7);
+    -moz-box-shadow:    4px 3px 6px 2px rgba(50, 50, 50, 0.7);
+    box-shadow:         4px 3px 6px 2px rgba(50, 50, 50, 0.7);
+    margin-bottom: 10px;
+}
+
+.event-details__title {
+    height: 54px;
+    line-height: 54px;
+    background: #022e52;
+    padding-left: 20px;
+}
+
+.event-details__title a {
+    color: #ffffff;
+    font-size: 23px;
+}
+
+.event-details__title a:hover {
+    color: #ffffff;
+}
+
+.white-arrow {
+    display: inline-block;
+    background-image: url(/static/images/event/white_arrows.png);
+    width: 13px;
+    height: 13px;
+}
+
+.white-arrow_pos_next {
+    background-position: -25px 0;
 }
 
 .searchpad-event-wrapper table td,
@@ -24,6 +53,10 @@
     display: inline-block;    
     border: 1px solid #c6c6c6;
     vertical-align: top;    
+}
+
+.event-wrapper .event-photo {
+    background: #ffffff;
 }
 
 .event-wrapper .event-photo {
