--- a/alpha/event/assets/styles/searchpad/popup.css
+++ b/alpha/event/assets/styles/searchpad/popup.css
@@ -94,22 +94,35 @@
 }
 
 .search-pad-popup .searchpad-event-details {
-    margin-top: 15px;
-    padding: 0 15px;
+    margin-top: 2px;
+    padding: 0 15px 0 6px;
+}
+
+.searchpad-event-details__container {
+    -webkit-box-shadow: 4px 3px 6px 2px rgba(50, 50, 50, 0.7);
+    -moz-box-shadow:    4px 3px 6px 2px rgba(50, 50, 50, 0.7);
+    box-shadow:         4px 3px 6px 2px rgba(50, 50, 50, 0.7);
 }
 
 .search-pad-popup .searchpad-event-details header {
-    padding-bottom: 6px;
+    background: #022e52;
+    height: 37px;
+    line-height: 37px;
+    padding-left: 19px;
 }
 
 .search-pad-popup .searchpad-event-details header a {
-    color: #022e52;    
+    color: #ffffff;
     font-size: 20px;
+}
+
+.searchpad-event-wrapper {
+    padding: 14px 0 0 18px;
+    background: #ecebeb;
 }
 
 .searchpad-event-wrapper .description {
     position: relative;
-    border: 1px solid #c6c6c6;
     padding: 3px 13px;
     color: #000000;
     margin-top: 7px;
@@ -142,7 +155,7 @@
 
 .search-pad-popup .searchpad-event-details .event-details {
     margin-left: 10px;
-    width: 265px;
+    width: 252px;
 
 }
 
