--- a/alpha/event/assets/styles/styles-new.css
+++ b/alpha/event/assets/styles/styles-new.css
@@ -268,6 +268,9 @@ ul.errorlist li {
 
 .search-pad-content.events-container .searchtags-wrapper {
     background: none;
+    width: 425px;
+    padding: 9px 16px 6px 16px;
+    margin-left: 6px;
 }
 
 .events-container .searchtags-wrapper ul.searchtags {
