--- a/alpha/venues/assets/styles/venues/venues.css
+++ b/alpha/venues/assets/styles/venues/venues.css
@@ -117,7 +117,7 @@
     background: #013e6f;
     font-size: 14px;
     color: #ffffff;
-    padding: 10px;
+    padding: 10px 10px 9px;
     border-bottom: 1px solid #757575;
 }
 
