fix validation errors on the home page

--- a/alpha/event/templates/events/_event_featured.html
+++ b/alpha/event/templates/events/_event_featured.html
@@ -17,10 +17,10 @@
     <div class="features-navigation">
         <ul>
             <li class="step-links">
-                <a class="prev" href="javascript: void;">
+                <a class="prev" href="javascript: void(0);">
                     prev
                 </a>
-                <a class="next"  href="javascript: void;">
+                <a class="next"  href="javascript: void(0);">
                     next
                 </a>
             </li>
