--- a/alpha/venues/templates/venue_accounts/new_venue_account.html
+++ b/alpha/venues/templates/venue_accounts/new_venue_account.html
@@ -44,7 +44,7 @@
 
                 <br />
 
-                or <a href="javascript: void;" class="switch-to-autocomplete">
+                or <a href="javascript: void(0);" class="switch-to-autocomplete">
                     you can choose venue from existing
                 </a>
             </div>
