fix validation errors on the home page

--- a/alpha/event/templates/featured/featured_events.html
+++ b/alpha/event/templates/featured/featured_events.html
@@ -4,7 +4,11 @@
     {% if in_email %}
         <td height="147" style="border: 5px solid #ffffff" valign="top">
             <a target="_blank" href="{{site}}{% featured_event_link event %}" style="text-decoration:none; border: none; display: block; line-height:0px;">
-                <img src="{{site}}{{STATIC_URL}}/{% feature_event_as_image event %}" style="border-collapse:collapse; border: none;"  height="154" width="154"/>
+                <img src="{{site}}{{STATIC_URL}}/{% feature_event_as_image event %}"
+                     style="border-collapse:collapse; border: none;"
+                     height="154"
+                     width="154"
+                     alt="" />
             </a>
         </td>
         <td width="10" align="left">
@@ -17,7 +21,10 @@
             <a href="{% featured_event_link event %}">
                 <div class="featured-img-wrapper">
                     {% if event.picture %}
-                        <img src="{% cropped_thumbnail event.image "cropping" width=154 %}" height="154" width="154">
+                        <img src="{% cropped_thumbnail event.image "cropping" width=154 %}"
+                             height="154"
+                             width="154"
+                             alt="" />
                     {% else %}
                         <img src="/static/images/default-event.jpg" height="154" width="154" alt="">
                     {% endif %}
