fixing validation errors on the venues page

--- a/alpha/feedback/templates/feedback/contact.html
+++ b/alpha/feedback/templates/feedback/contact.html
@@ -36,7 +36,6 @@
         </div>
     </div>
     <script type="text/javascript">
-        var select = $(".venue-account-owner-dropdown select");
-        $(".venue-account-owner-dropdown").qap_dropdown();
+        $(".type-dropdown").qap_dropdown();
     </script>
 {% endblock %}
