--- a/alpha/venues/templates/venues/index.html
+++ b/alpha/venues/templates/venues/index.html
@@ -12,7 +12,7 @@
     <link href="{{STATIC_URL}}styles/browse/featured_events.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/venues/venues.css" rel="stylesheet" type="text/css" />
 
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>
+    <script src="{{ 'http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en'|htmlspecialchars|safe }}"></script>
     <script src="{{STATIC_URL}}js/featured/featured-event-viewer.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/venues/venues-page.js" type="text/javascript"></script>
 
