--- a/alpha/cityfusion_admin/templates/actions/report_event_popup.html
+++ b/alpha/cityfusion_admin/templates/actions/report_event_popup.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="popup-buttons">
-        <a href="javascript: void" class="popup-button send-report-button">
+        <a href="javascript: void(0);" class="popup-button send-report-button">
             Send
         </a>
     </div>
